2017-08-25  Petasis George  <petasis@iit.demokritos.gr>
	* CMakeLists.txt: Added support for -Dwith-tcl, -Dwith-tclsh.

2017-01-25  Petasis George  <petasis@iit.demokritos.gr>
	* win\OleDND.cpp: Fixed a memory leak on the pDropTarget object in
	TkDND_RegisterDragDropObjCmd. Added calls to RevokeDragDrop on window
	destroy.

2017-01-20  Petasis George  <petasis@iit.demokritos.gr>
	* configure.in:
	* CMakeLists.txt:
	* library\tkdnd_windows.tcl:
	* win\OleDND.h: Added support fot type UniformResourceLocator under
	Windows.

2015-07-07  Petasis George  <petasis@iit.demokritos.gr>
	TkDND 2.8 released.

2015-07-06  Petasis George  <petasis@iit.demokritos.gr>
	* Makefile.in:
	* doc/tkDND.htm:
	* doc/tkDND.n:
	* macosx/macdnd.m:
	* unix/tkUnixSelect.c: Applied two patches from Andrew Murray,
	regarding various fixes (various typos and unused variable warnings
	under OS X).

2015-04-13  Petasis George  <petasis@iit.demokritos.gr>
	* library\tkdnd_generic.tcl: Fixed SF bug #30: Toplevel Widget Cannot
	Be Drop Target. Bug reported by Tim Tomkinson.

2015-03-04  Petasis George  <petasis@iit.demokritos.gr>
	* library/tkdnd.tcl: Added support in <<DragInitCmd>> & <<DragEndCmd>>
	for %x, %y mouse coordinates (relative to window that is the drag
	source). Added the ability to stop a drag on the drag source. The
	<<DragInitCmd>> binding must return either "refuse_drop"
	as a value (instead of a list), or use
	"return -code break"|"return -code continue".

2015-02-20  Petasis George  <petasis@iit.demokritos.gr>
	* unix/TkDND_XDND.c: Fixed a bug in converting Time to a Tcl object.
	Now Tcl_NewWideIntObj() is used, as Tcl_NewLongObj() could cause an
	overflow under some operating systems. Bug reported by Nicolas Bats,
	for OS X 10.7.

2014-11-26  Petasis George  <petasis@iit.demokritos.gr>
	TkDND 2.7 released.

2014-10-07  Petasis George  <petasis@iit.demokritos.gr>
	* macosx/macdnd.m:
	* library/tkdnd_macosx.tcl: Added support for DND_HTML in OS X.
