@@ -1,3 +1,9 @@
+2018-01-16  Petasis George  <petasis@iit.demokritos.gr>
+	* win/TkDND_OleDND.cpp: Fixes for C++ warnings (which does not allow to
+	pass a static string to  Tcl_SetResult()).
+	* CMakeLists.txt: Added support for building with msys2 & gcc under
+	windows.
+
 2017-08-25  Petasis George  <petasis@iit.demokritos.gr>
 	* CMakeLists.txt: Added support for -Dwith-tcl, -Dwith-tclsh.
 
